# sbomify

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.cjs  1q  AGENTS.md  CHANGELOG-v0.18.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.dev  DEVELOPER.md  DYNAMIC_HOSTS_FIX_SUMMARY.md  Dockerfile  Dockerfile-frontend  LICENSE  README.md  RELEASE.md  SECURITY.md  bun.lockb  code_of_conduct.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tests.yml  docker-compose.yml  eslint.config.js  fix_remaining_paths.py  manage.py  package-lock.json  package.json  pyproject.toml  stylelint-custom-rules.cjs  tailwind.config.js  (+8 more)
.agent/rules/: uv-run.md
.cursor/rules/: django.mdc  general.mdc  javascript-typescript.mdc  python.mdc  vue.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: security-enhancement.md
.github/scripts/: publish-vex.sh
.github/workflows/: ci-cd.yml  ci-cd.yml.bak  codeql.yml  scorecards.yml  screencasts.yml
access_tokens/: apps.py  auth.py  models.py  tests.py  utils.py
billing/: apis.py  apps.py  billing_processing.py  config.py  email_notifications.py  forms.py  models.py  notifications.py  schemas.py  stripe_client.py  urls.py  views.py  webhook_handler.py
billing/js/: billing.spec.ts  billing.ts  main.ts
billing/migrations/: 0001_initial.py  0002_billing_plans_data.py  0003_setup_stripe_billing.py  0004_add_trial_periods.py  0004_development_billing_setup.py
billing/tests/: __init__.py  fixtures.py  test_api.py  test_billing_processing.py  test_email_notifications.py  test_metadata_propagation.py  test_services.py  test_stripe_client.py  test_user_limits.py  test_views.py  test_views_extended.py  tests.py
catalog/: admin.py  models.py  schemas.py  tests.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_fix_contenttype.py  0004_alter_component_options_alter_product_options_and_more.py  0005_component_component_type_component_projects_and_more.py  0005_ensure_tables_and_add_fields.py  0006_add_constraints.py
cbom/: sbomify-backend.cbom.cdx.json
core/: adapters.py  admin.py  apis.py  apps.py  auth.py  context_processors.py  errors.py  forms.py  keycloak_events.py  keycloak_utils.py  models.py  object_store.py  schemas.py  signals.py  tests.py  urls.py  utils.py  views.py
core/js/: alerts-global.ts  alerts.ts  common_vue.js  components-dashboard.ts  constants.ts  django-messages.ts  enums.ts  main.ts  metadata-formsets.ts  type_defs.d.ts  utils.ts  vite-env.d.ts  vulnerability-trends.ts
core/management/: __init__.py
core/migrations/: 0001_initial.py  0002_remove_social_auth.py  0003_site_from_app_base_url.py  0004_create_keycloak_social_app.py  0006_create_socialapp_sites_table.py  0007_associate_keycloak_to_site.py  0008_backfill_user_names_from_socialaccount.py  0009_component_product_productproject_project_and_more.py  0010_add_release_models_with_prerelease.py  0011_add_performance_indexes.py
core/pipeline/: auth0.py
core/templates/: 404.html  404.html.j2  error.html  error.html.j2
core/templatetags/: brand_tags.py  schema_tags.py  utm_tags.py
core/tests/: __init__.py  fixtures.py  s3_fixtures.py  shared_fixtures.py  test_api_database_error_handling.py  test_apis.py  test_auth.py  test_breadcrumb_tags.py  test_component_detailed_migration.py  test_components_dashboard_migration.py  test_components_vue_migration.py  test_crud_apis.py  test_document_tagging.py  test_error_consistency.py  test_integration.py  test_keycloak_adapter.py  test_models.py  test_permission_consistency.py  test_public_access_apis.py  test_public_private_constraints.py  test_release_api.py  test_release_apis.py  test_release_artifacts_api.py  test_release_models.py  test_release_pages_migration.py  test_s3_fixtures_examples.py  test_sbom_tagging.py  test_utils.py  test_views.py
docker/: Dockerfile-backend-dev  Dockerfile-dev  Dockerfile-frontend-dev  dev-dbs-init.sh
docs/: README.md  RELEASE.md  access-tokens.md  billing.md  caddy-custom-domains.md  deployment.md  email-triggers.md  keycloak_migration.md  notifications.md  onboarding.d2  posthog-tier2-events.md  sitemap.d2  vue-to-django-migration.md
docs/ADR/: 0001-django-monolith.md  0002-languages-and-frameworks.md  0003-plugin-based-assessments-for-sbom-uploads.md  0004-immutable-security-artifacts.md  0005-frontend-architecture-tailwind-css-and-alpine-js.md  0006-generalized-bom-model.md  0006-unified-artifact-model.md  0007-remove-project-layer.md  (+7 more)
documents/: admin.py  apis.py  forms.py  models.py  urls.py  views.py
keycloak/: README.md  package.json  tailwind.config.ts
licensing/: api.py  loader.py
notifications/: apis.py  schemas.py  tests.py  utils.py
sbomify/: __init__.py  apis.py  asgi.py  logging.py  logging_filters.py  settings.py  task_utils.py  tasks.py  test_settings.py  urls.py  wsgi.py
sboms/: admin.py  apis.py  apps.py  custom_queries.py  forms.py  license_expression_service.py  license_service.py  license_utils.py  models.py  ntia_validator.py  sbom_validator.py  schemas.py  signals.py  urls.py  utils.py  versioning.py  views.py
screencasts/: Dockerfile.chromium  account_deletion.py  click_indicator.js  conftest.py  cra_compliance.py  document_signatures.py  document_upload.py  oidc_trusted_publishing.py  plugin_enablement.py  product_creation.py  profile_editing.py  release_creation.py  tea_enabling.py  trust_center_setup.py  vex_upload.py  vulnerability_scanning.py  workspace_deletion.py
static/: site.css
teams/: admin.py  apis.py  apps.py  decorators.py  fixtures.py  forms.py  models.py  schemas.py  services.py  signals.py  tests.py  urls.py  utils.py  views.py
tests/: test_license_expression.py  test_license_expression_service.py  test_page_rendering_integration.py
vex/: README.md  container.vex.cdx.json  frontend-stack.vex.cdx.json  justifications.yaml
vulnerability_scanning/: admin.py  apis.py  apps.py  circuit_breaker.py  clients.py  fields.py  models.py  services.py  tasks.py
(+2014 files in other folders)
