[project]
name = "sbomify"
version = "0.25.1"
description = "sbomify - the security artifact hub"
authors = [{ name = "sbomify", email = "hello@sbomify.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "django>=5.2.6,<6",
    "python-dotenv>=1.1.1,<2",
    "psycopg2>=2.9.9,<3",
    "django-extensions~=4.1",
    "django-widget-tweaks>=1.5.0,<2",
    "pyjwt>=2.10.1,<3",
    "pydantic>=2.11.9,<3",
    "django-anymail[sendgrid]~=14.0",
    "whitenoise>=6.11.0,<7",
    "sentry-sdk>=2.38.0,<3",
    "django-ninja>=1.4.3,<2",
    "ruid>=0.1.2,<0.2",
    "boto3>=1.40.36,<2",
    "dj-database-url>=3.0.1,<4",
    "django-vite>=3.1.0,<4",
    "django-health-check>=3.20.0,<4",
    "django-htmx>=1.25.0,<2",
    "email-validator>=2.3.0,<3",
    "stripe>=14.0.0,<15",
    "python-keycloak>=7.0.1,<8",
    "django-allauth>=65.11.2,<66",
    "dramatiq[redis,watch]>=2.0.0,<3",
    "django-redis>=5.0.0",
    "redis>=4.0.0",
    "tenacity>=9.1.2,<10",
    "license-expression>=30.4.4,<31",
    "pyyaml>=6.0.2,<7",
    "dramatiq-crontab>=1.0.12,<2",
    "uvicorn[standard]>=0.40.0,<0.41",
    "uvicorn-worker>=0.4.0,<0.5",
    "gunicorn>=23.0.0,<24",
    "django-dramatiq>=0.15.0",
]

[project.urls]
Homepage = "https://sbomify.com"
Repository = "https://github.com/sbomify/sbomify"

[dependency-groups]
dev = [
    "ipython>=8.37.0,<9",
    "ruff>=0.14.5,<0.15",
    "bandit>=1.8.6,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "pre-commit>=4.3.0,<5",
    "datamodel-code-generator[http]~=0.44",
    "pytest-json-report>=1.5.0,<2",
    "pytest-playwright>=0.7.1,<0.8",
    "djlint>=1.36.4,<2",
    "django-cors-headers>=4.9.0",
]
test = [
    "pytest>=9.0.1,<10",
    "pytest-django>=4.11.1,<5",
    "pytest-env>=1.1.3,<2",
    "pytest-mock>=3.15.1,<4",
    "coverage>=7.10.7,<8",
    "diffimg==0.3.0",
    "freezegun==1.5.5",
]
prod = ["poetry-plugin-export>=1.9.0,<2"]

[tool.uv]
default-groups = [
    "dev",
    "test",
    "prod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
DJANGO_SETTINGS_MODULE = "sbomify.test_settings"

env = [
    "DJANGO_TEST_USER=testuser",
    "DJANGO_TEST_PASSWORD=test",
    "DJANGO_TEST_EMAIL=test@example.com",
    "DEFAULT_FROM_EMAIL=test@example.com",
    "SENDGRID_API_KEY=invalid-key",
    "DJANGO_ALLOW_ASYNC_UNSAFE=1",  # Required for Playwright e2e tests - allows sync Django ORM operations in async context
    # Bind Django live test server on all interfaces so the Chromium container can access it via host.docker.internal
    "DJANGO_LIVE_TEST_SERVER_ADDRESS=0.0.0.0:0",
]

addopts = "--nomigrations"
# -- recommended but optional:
python_files = ["tests.py", "test_*.py"]


filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:::ninja.signature.utils"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["sbomify", "core", "access_tokens", "sboms", "teams"]
omit = [
    "*apps.py",
    "*migrations/*",
    "*settings*",
    "*/migrations/*",
    "tests.py",
    "fixtures.py",
    "*urls.py",
    "*wsgi/*",
    "manage.py",
    "conftest.py",
    "asgi.py",
    "wsgi.py",
    "sboms/sbom_format_schemas/*",
    "*/tests/*"
]

[tool.coverage.report]
omit = [
    "*apps.py",
    "*migrations/*",
    "*settings*",
    "*/migrations/*",
    "tests.py",
    "fixtures.py",
    "*urls.py",
    "*wsgi/*",
    "manage.py",
    "conftest.py",
    "asgi.py",
    "wsgi.py",
    "sboms/sbom_format_schemas/*",
    "*/tests/*"
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["./.venv", "tests.py", "sbom_format_schemas", "tests", "node_modules", "test_settings.py"]
# B101 = ignore assert_used
# B404 = allow use of sub process module
# B603 = allow calls to Popen with shell=False
skips = ["B101", "B404", "B603", "B608"]

[tool.ruff]
line-length = 120
src = ["."]
exclude = ["migrations", "sbom_format_schemas", "test_settings.py", "tests", "tests.py", "conftest.py", "manage.py", "asgi.py", "wsgi.py"]

[tool.ruff.lint]
select = ["F", "E", "I", "Q", "T"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.djlint]
# Ignore inline styles rule for email templates (H021) since they're required for email client compatibility
ignore = "H021"
extension = "j2"
