[project]
name = "sbomify"
version = "26.1.0"
description = "sbomify - the security artifact hub"
authors = [{ name = "sbomify", email = "hello@sbomify.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "django>=5.2.13,<7",
    "python-dotenv>=1.1.1,<2",
    "psycopg2-binary>=2.9.9,<3",
    "django-extensions~=4.1",
    "django-widget-tweaks>=1.5.0,<2",
    "pyjwt>=2.12.0,<3",
    "pydantic>=2.11.9,<3",
    "django-anymail[sendgrid]~=15.0",
    "whitenoise>=6.11.0,<7",
    "sentry-sdk>=2.38.0,<3",
    "django-ninja>=1.4.3,<2",
    "ruid>=0.1.2,<0.2",
    "boto3>=1.40.36,<2",
    "dj-database-url>=3.0.1,<4",
    "django-vite>=3.1.0,<4",
    "django-health-check>=3.20.0,<5",
    "django-htmx>=1.25.0,<2",
    "email-validator>=2.3.0,<3",
    "stripe>=14.0.0,<16",
    "python-keycloak>=7.1.1,<8",
    "django-allauth>=65.11.2,<66",
    "dramatiq[redis,watch]>=2.0.0,<3",
    "django-redis>=5.0.0",
    "redis>=4.0.0",
    "tenacity>=9.1.2,<10",
    "license-expression>=30.4.4,<31",
    "pyyaml>=6.0.2,<7",
    "dramatiq-crontab>=1.0.12,<2",
    "uvicorn[standard]>=0.45.0,<0.46",
    "uvicorn-worker>=0.4.0,<0.5",
    "gunicorn>=25.0.3,<26",
    "django-dramatiq>=0.15.0",
    "channels>=4.0.0,<5",
    "channels-redis>=4.2.0,<5",
    "libtea==0.5.1",
    "compliance-trestle>=4.0.1,<5",
    "posthog>=3.20.0,<8",
    "tzdata>=2025.2",
    # Used by the pre-existing ``sbomify.apps.plugins.builtins.verification``
    # plugin to verify user-uploaded SBOM cosign attestations (a different
    # feature from CRA export signing, which was dropped from this PR).
    # The plugin has a ``try/except ImportError`` fallback, but installing
    # the library lets it actually perform signature verification instead
    # of always reporting "library not available".
    "sigstore>=4.2.0",
    # Renders the CRA bundle's markdown documents (Declaration of
    # Conformity, VDP, risk assessment, etc.) to PDF so the export ZIP
    # ships both ``.md`` (machine-friendly) and ``.pdf`` (human/auditor
    # friendly) copies side by side. WeasyPrint is the right pick over
    # xhtml2pdf / ReportLab because it (a) renders modern CSS via Pango,
    # (b) accepts ``data:image/png;base64,`` URLs for the embedded
    # signature image without extra disk/I-O plumbing, and (c) uses
    # the same HTML produced by the existing markdown_to_html helper
    # so we avoid maintaining a second renderer. System deps for
    # WeasyPrint (libpango, libjpeg, libopenjp2, libffi) are added in
    # the Dockerfile's python-common-code stage.
    "weasyprint>=66.0,<67",
]

[project.urls]
Homepage = "https://sbomify.com"
Repository = "https://github.com/sbomify/sbomify"

[dependency-groups]
dev = [
    "ipython>=9.10.0,<10",
    "ruff>=0.15.0,<0.16",
    "bandit>=1.9.3,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "pre-commit>=4.3.0,<5",
    "datamodel-code-generator[http]~=0.44",
    "pytest-json-report>=1.5.0,<2",
    "pytest-playwright>=0.7.1,<0.8",
    "djlint>=1.36.4,<2",
    "django-cors-headers>=4.9.0",
    "django-stubs[compatible-mypy]>=5.2.0,<7",
    "types-boto3>=1.42.0,<2",
    "types-psycopg2>=2.9.21,<3",
    "types-PyYAML>=6.0.12,<7",
    "types-gunicorn>=25.1.0,<26",
    "types-channels>=4.3.0,<5",
    "types-requests>=2.32.0,<3",
]
test = [
    "pytest>=9.0.3,<10",
    "pytest-django>=4.11.1,<5",
    "pytest-env>=1.1.3,<2",
    "pytest-mock>=3.15.1,<4",
    "coverage>=7.10.7,<8",
    "diffimg==0.3.0",
    "freezegun==1.5.5",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

override-dependencies = [
    "cryptography>=46.0.7",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "rfc3161-client>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
DJANGO_SETTINGS_MODULE = "sbomify.test_settings"

env = [
    "DJANGO_TEST_USER=testuser",
    "DJANGO_TEST_PASSWORD=test",
    "DJANGO_TEST_EMAIL=test@example.com",
    "DEFAULT_FROM_EMAIL=test@example.com",
    "SENDGRID_API_KEY=invalid-key",
    "DJANGO_ALLOW_ASYNC_UNSAFE=1",  # Required for Playwright e2e tests - allows sync Django ORM operations in async context
    # Bind Django live test server on all interfaces so the Chromium container can access it via host.docker.internal
    "DJANGO_LIVE_TEST_SERVER_ADDRESS=0.0.0.0:0",
]

addopts = "--nomigrations"
# -- recommended but optional:
python_files = ["tests.py", "test_*.py"]
norecursedirs = ["screencasts"]


filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:::ninja.signature.utils"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["sbomify", "core", "access_tokens", "sboms", "teams"]
omit = [
    "*apps.py",
    "*migrations/*",
    "*settings*",
    "*/migrations/*",
    "tests.py",
    "fixtures.py",
    "*urls.py",
    "*wsgi/*",
    "manage.py",
    "conftest.py",
    "asgi.py",
    "wsgi.py",
    "sboms/sbom_format_schemas/*",
    "*/tests/*"
]

[tool.coverage.report]
omit = [
    "*apps.py",
    "*migrations/*",
    "*settings*",
    "*/migrations/*",
    "tests.py",
    "fixtures.py",
    "*urls.py",
    "*wsgi/*",
    "manage.py",
    "conftest.py",
    "asgi.py",
    "wsgi.py",
    "sboms/sbom_format_schemas/*",
    "*/tests/*"
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["./.venv", ".claude", "tests.py", "sbom_format_schemas", "tests", "node_modules", "test_settings.py"]
# B101 = ignore assert_used
# B404 = allow use of sub process module
# B603 = allow calls to Popen with shell=False
skips = ["B101", "B404", "B603", "B608"]

[tool.ruff]
line-length = 120
src = ["."]
exclude = ["migrations", "sbom_format_schemas", "test_settings.py", "tests", "tests.py", "conftest.py", "manage.py", "asgi.py", "wsgi.py"]

[tool.ruff.lint]
select = ["F", "E", "I", "Q", "T"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.djlint]
# Ignore inline styles rule for email templates (H021) since they're required for email client compatibility
ignore = "H021"
extension = "j2"

[tool.mypy]
mypy_path = "."
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = [
    "migrations/",
    "manage\\.py",
    "asgi\\.py",
    "wsgi\\.py",
    "test_settings\\.py",
    "conftest\\.py",
    "tests/",
    "tests\\.py",
    "screencasts/",
    "sbom_format_schemas/",
]

[tool.django-stubs]
django_settings_module = "sbomify.settings"

# Packages with inline types but no py.typed marker
[[tool.mypy.overrides]]
module = ["django_redis.*", "django_vite.*", "ruid.*"]
follow_untyped_imports = true

# Packages with no/minimal types and no stubs on PyPI
[[tool.mypy.overrides]]
module = [
    "allauth.*",
    "anymail.*",
    "whitenoise.*",
    "health_check.*",
    "license_expression.*",
    "dramatiq_crontab.*",
    "django_dramatiq.*",
    "channels_redis.*",
    "widget_tweaks.*",
    "debug_toolbar.*",
]
ignore_missing_imports = true

# compliance-trestle uses pydantic v2 with aliased fields; mypy cannot resolve them
[[tool.mypy.overrides]]
module = ["trestle.*"]
ignore_missing_imports = true
follow_imports = "skip"

# Auto-generated pydantic schema files (generated by datamodel-codegen)
[[tool.mypy.overrides]]
module = ["sbomify.apps.sboms.sbom_format_schemas.*"]
follow_imports = "skip"
